- New getTop SQL request in ContactDAO to get the presences - Show the presences on the home and chat add - Add a specific CSS when some active list are focused (using tabindex) - Align properly the spinner in the roster - Fix some missing avatar

--- a/app/widgets/Roster/roster.css
+++ b/app/widgets/Roster/roster.css
@@ -76,8 +76,8 @@
 }
 
 #roster ul#rosterlist > div#spinner{
-    width: 150px;
     position: relative;
-    margin: 50% auto;
     overflow: visible;
+    text-align: center;
+    margin: 50% 0;
 }
